Aumenta versión, crea variable JAVA_OPTS